--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -253,11 +253,12 @@
 
             <b>13 сентября 2012</b>
             <li>
-            (опция) Использовать резервный сервер когда juick тормозит. В опции указывается длительность ожидания
-             жуйка, после которой вступает в действие бакупный сервер, если жуйк не отвечает. Доступны разные
+            (экспериментальая опция) Использовать резервный сервер когда juick тормозит. В опции указывается длительность ожидания
+             жуйка, после которой вступает в действие резервный сервер (JA), если жуйк не отвечает. Доступны разные
               таймауты, опция \'всегда\' и \'никогда\'.<br>
-              Недавно был насетаплен бакупный сервер, который может отдавать список всех мессаг,
-              и отдельные мессаги через juick http api. Сервер постоянно вытягивает из жуйка
+              Недавно был насетаплен резервный сервер (любезно предоставленный юзером @mintcat),
+              который может отдавать список всех мессаг, и отдельные мессаги через juick http api.
+              Сервер постоянно вытягивает из жуйка
             последние сообщения и комментарии, благо juick http api это позволяет делать почти не нагружая сервер.
             Сервер будет использоваться в будущем и для других фишек.
             </li>
@@ -445,12 +446,13 @@
             <br>
             На сервер <b><i>jugregator.com</i></b> ходят запросы на срачики, без вашей жуйковской идентификации.
             <br>
-            На сервера <b><i>проксей картинок</i></b> уходят запросы на картинки с вашей авторизацией для прокси, если она есть.
+            На сервера <b><i>проксей картинок</i></b> уходят запросы на картинки с вашей авторизацией для прокси,
+            если она есть, если вы насетапили прокси для картинок.
             <br>
             На <b><i>XMPP/jabber сервер</i></b> уходит только ваша XMPP авторизация, если вы его включили.
 
             <br>
-            На <b><i>сайт разработчика</i></b> (меня, @SannySanoff) уходит информация о падениях программы (только если вы ее
+            На <b><i>сайт разработчика</i></b> уходит информация о падениях программы (только если вы ее
             отправляете соответствующей кнопкой), в которую входит информация об ошибке и версии программы, версия
             вашего андроида и модель телефона, количество памяти.
             <br> Кроме того, только если вы разрешили анонимную статистику, то туда же уходит, изредка:
@@ -472,9 +474,15 @@
             </ul>
             Больше ничего не отправляется. Отправляемую информацию можно посмотреть в настройках, нажав MENU.
             Отправляемые данные занимают около 1КБ.
+            <br>
+            На сервер <b><i>ja.ip.rt.ru</i></b> (Juick Advanced server, JA) уходят ваши запросы на мессаги и треды,
+             в случаях когда сервер может заменить juick.com, если вы настроили это. Туда не уходит ваша авторизация,
+             и поэтому запросы на вашу персональную ленту сервер не обрабатывает. Также туда не идут запросы на
+             top и сообщения с картинками.
              <br>
-            Я собираюсь использовать собранную анонимную информацию для
-            своего будущего доминирования над всем миром, я гарантирую это.
+             <hr/>
+            Собранная анонимная информация будет использована для
+            моего будущего доминирования над всем миром, я гарантирую это.
             ]]>
     </string>
 
@@ -503,7 +511,7 @@
     <string name="ChooseFirstOption">If you don\'t know what to choose, choose first option</string>
     <string name="IndirectImages">Indirect images</string>
     <string name="Gelbooru">...from known sites like gelbooru.com. Requires extra traffic.</string>
-    <string name="UserBackupServer">Use backup server where possible</string>
+    <string name="UseBackupServer">Use backup server where possible</string>
     <string name="Usage_Report">Usage Report</string>
 
 
